loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:18: error: ';' expected but 'while' found.
  } while (sortieTrouvee()) }
    ^Poucet1:22: error: 'while' expected but '}' found.
	}
        ^